2011-06-16 Sancho lerena <slerena@ærtica.es>

	* include/integria_cron.php,
	include/help/en/help_auto_incident_close.php: Autoclose is in DAYS.
	Fixed help and format date in data conversion.

	* include/functions_incidents.php: Stat graphs a bit bigger. Incident
	/group pie chart was non-legible.

2011-06-15 Dario Rodriguez <dario.rodriguez@artica.es>

	* include/graphs/functions_pchart.php: Adding homedir to radar, kiviat 
	and polar graphs.
	* include/graphs/fgraph.php: Setting temp serialize files to true.

2011-06-14  Sergio Martin <sergio.martin@artica.es>

	* include/graphs/functions_pchart.php
	include/graphs/pChart/pDraw.class.php
	include/graphs/functions_fsgraph.php
	include/graphs/functions_gd.php
	include/graphs/fgraph.php
	include/graphs/functions_utils.php
	include/config_process.php
	include/include_graph_dependencies.php: Merged latest 
	modifications in graph abstraction from pandora including
	ttl (time to live) to graphs when are calling from pdf execution

2011-06-14  Sergio Martin <sergio.martin@artica.es>

	* images/page_white_stack.png: Add new icon to 'copytodefault'
	feature on users audit

2011-06-08  Sergio Martin <sergio.martin@artica.es>

	* include/js/integria_incident_search.js: Fixed refresh loop
	in massive updates

2011-06-08  Sergio Martin <sergio.martin@artica.es>

	* operation/incidents/incident_detail.php: Fixed a bug that
	losts the inventory object when massive update

2011-06-08  Sergio Martin <sergio.martin@artica.es>

	* include/js/integria_incident_search.js
	include/functions_form.php
	operation/incidents/incident_detail.php: Refresh the
	incident list when an incident is updated and when a massive 
	option modifies various incidents
	
	* godmode/setup/setup_visual.php: Fixed a bug of update the block size from
	setup

2011-06-08  Sergio Martin <sergio.martin@artica.es>

	* operation/incidents/incident_search.php: Added the http link to 
	the incident ID in the incident list like the old version
